--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
 		<!-- Custom styles for this template -->
 		<link href="./styles/signin.css" rel="stylesheet">
 
@@ -47,7 +41,7 @@
 					</div>
 					
 				</div>
-				<button id="submit" class="btn btn-lg btn-primary btn-block">Indsend data</button>
+				<button id="submitBtn" class="btn btn-lg btn-primary btn-block">Indsend data</button>
 
 				<div class="form-group">
 					<label for="average">Gennemsnit</label>
@@ -56,11 +50,17 @@
 						<div class="input-group-addon">Km/L.</div>
 					</div>
 				</div>
-				<button id="calculate" class="btn btn-lg btn-primary btn-block">Beregn</button>
+				<button id="calculateBtn" class="btn btn-lg btn-primary btn-block">Beregn</button>
 				
 			</form>
 		</div>
+
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 		<script src="./scripts/script.js"></script>
 
 	</body>
