--- a/index.html
+++ b/index.html
@@ -46,8 +46,13 @@
 				<div class="form-group">
 					<label for="average">Gennemsnit</label>
 					<div class="input-group">
-						<input type="number" class="form-control" id="average" name="average" placeholder="0.00000000" step="0.00000001">
+						
+						<input type="number" class="form-control" id="average" name="average" placeholder="0.0000" step="0.0001">
+						
+						<!--
+						<input type="text" class="form-control" id="average" name="average" placeholder="0.00000000">
 						<div class="input-group-addon">Km/L.</div>
+						-->
 					</div>
 				</div>
 				<button id="calculateBtn" class="btn btn-lg btn-primary btn-block">Beregn</button>
