--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<form id="dieselForm" class="form-signin">
 				<h2 class="form-signin-heading">Diesel forbrug</h2>
 
-				<div class="form-group">
+				<div class="form-group formData">
 				
 					<label for="price">Kroner</label>
 					<div class="input-group">
